--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,28 @@
+/* Import statements must come first */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
 
+/* Then you can import Tailwind and other plugins */
 @import "tailwindcss";
-
 @plugin "tailwindcss-animate";
+
+/* After @import and @plugin comes the @layer statement */
+@layer theme, base, components, utilities;
+
+/* CSS rules */
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .my-container {
+    @apply mx-auto max-w-[1536px] px-4 2xl:px-16;
+  }
+}
 
 @custom-variant dark (&:is(.dark *));
 
@@ -135,21 +155,6 @@ html {
   --shadow-myshadow2: 0px 0px 30px 0px rgba(132, 45, 255, 1);
 
   --drop-shadow-3xl: 0 35px 35px rgba(0, 0, 0, 0.25);
-}
-
-@layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
-
-@layer utilities {
-  .my-container {
-    @apply mx-auto max-w-[1536px] px-4 2xl:px-16;
-  }
 }
 
 body {
